--- a/site/tsconfig.json
+++ b/site/tsconfig.json
@@ -2,6 +2,10 @@
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
     "jsx": "react-jsx",
-    "jsxImportSource": "astro"
+    "jsxImportSource": "astro",
+    "baseUrl": ".",
+    "paths": {
+      "@data/*": ["../data/*"]
+    }
   }
 }
